# cpp-simd-riscv

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md
include/rvv/: rvv.hpp
include/sve/: sve.hpp
tests/unit/: CMakeLists.txt  addition.cpp  mask_operations.cpp  operations.cpp
